# connected-data-products-demo

./: .gitignore  01-virtualize-https.ipynb  01-virtualize-s3.ipynb  02-query-icechunk.ipynb  03-query-h5netcdf.ipynb  LICENSE  README.md  index.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
